# DsChat

./: .gitignore  README.md
client/DSchat/: CMakeLists.txt  adduseritem.h  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.ui  applyfriendlist.h  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authenfriend.cpp  authenfriend.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.cpp  config.ini  contactuserlist.cpp  contactuserlist.h  conuseritem.cpp  (+52 more)
client/DSchat/style/: stylesheet.qss
server/ChatServer/: AsioIOServicePool.h  CServer.cpp  CSession.cpp  ChatServer.cpp  ChatServer.vcxproj  ChatServiceImpl.h  LogicSystem.cpp  MsgNode.h  MysqlDao.h  MysqlMgr.cpp  RedisMgr.cpp  RedisMgr.h  UserMgr.h  config.ini
server/ChatServer2/: AsioIOServicePool.cpp  CServer.h  CSession.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServer.vcxproj.filters  ChatServiceImpl.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  PropertySheet.props  Singleton.h  UserMgr.cpp  config.ini  const.h  data.h  message.pb.h  utils.cpp  utils.h
server/GetServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GetServer.cpp  GetServer.vcxproj  GetServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.grpc.pb.cc
server/GetServer/GetServer/Debug/: vc145.idb
server/GetServer/GetServer/Debug/GetServer.tlog/: CL.command.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  GetServer.lastbuildstate
server/StatusServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  PropertySheet.props  StatusServer.vcxproj  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  message.grpc.pb.h  message.pb.cc  message.proto
server/VerifyServer/: config.json  package-lock.json  package.json  proto.js  redis.js  server.js
